manifests/core/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core
  namespace: core
  labels:
    app.kubernetes.io/name: core
spec:
  selector:
    app.kubernetes.io/name: core
  ports:
    - name: http
      port: 8080
      targetPort: http
