manifests/core/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: core
  namespace: core
spec:
  parentRefs:
    - name: public-gateway
      namespace: istio-system
      sectionName: https-wildcard
  hostnames:
    - api.ggang.cloud
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /v1/core
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: core
          port: 8080
